exchanged png files  with svg

--- a/summary.html
+++ b/summary.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join - Summary</title>
-    <link rel="icon" type="image" href="assets/img/Capa 2join-logo.png">
+    <link rel="icon" type="image" href="assets/img/joinlogoBlack.svg">
 
     <link rel="stylesheet" href="summary_style.css">
     <link rel="stylesheet" href="fonts.css">
@@ -44,7 +44,7 @@
                     </div>
                     <div class="second-row">
                         <div class="urgent-tasks">
-                            <img src="assets/img/urgentSymbol.png">
+                            <img src="assets/img/urgentSymbol.svg">
                             <div>
                                 <h2>1</h2>
                                 <span>Urgent</span>
@@ -57,14 +57,14 @@
                     </div>
                     <div class="third-row">
                         <div>
-                            <img src="assets/img/todoSymbolSummaryPen.png">
+                            <img src="assets/img/todoSymbolSummaryPen.svg">
                             <div class="content-div-row-3">
                                 <h2>1</h2>
                                 <span>To-do</span>
                             </div>
                         </div>
                         <div>
-                            <img src="assets/img/doneSymbolSummary.png">
+                            <img src="assets/img/doneSymbolSummary.svg">
                             <div class="content-div-row-3">
                                 <h2>1</h2>
                                 <span>Done</span>
@@ -103,7 +103,7 @@
             </div>
             <div class="second-row">
                 <div class="urgent-tasks">
-                    <img src="assets/img/urgentSymbol.png">
+                    <img src="assets/img/urgentSymbol.svg">
                     <div>
                         <h2>1</h2>
                         <span>Urgent</span>
@@ -116,14 +116,14 @@
             </div>
             <div class="third-row">
                 <div>
-                    <img src="assets/img/todoSymbolSummaryPen.png">
+                    <img src="assets/img/todoSymbolSummaryPen.svg">
                     <div class="content-div-row-3-mobile">
                         <h2>1</h2>
                         <span>To-do</span>
                     </div>
                 </div>
                 <div>
-                    <img src="assets/img/doneSymbolSummary.png">
+                    <img src="assets/img/doneSymbolSummary.svg">
                     <div class="content-div-row-3-mobile">
                         <h2>1</h2>
                         <span>Done</span>
