help page summary

--- a/add_task.html
+++ b/add_task.html
@@ -18,7 +18,7 @@
 
     <div class="content-destop">
         <div w3-include-html="assets/templates/destop_template.html"></div>
-        <div class="inner-content">
+        <div class="inner-content" id="inner-content">
             <h1>Add task</h1>
         </div>
     </div>
