--- a/contacts.html
+++ b/contacts.html
@@ -23,7 +23,7 @@
 
     <div class="content-destop">
         <div w3-include-html="assets/templates/destop_template.html"></div>
-        <div class="inner-content">
+        <div class="inner-content" id="inner-content">
             <div class="complete-page">
                 <div class="all-contacts">
 
