--- a/board.html
+++ b/board.html
@@ -34,7 +34,7 @@
 
     <div class="content-destop">
         <div w3-include-html="assets/templates/destop_template.html"></div>
-        <div class="inner-content">
+        <div class="inner-content" id="inner-content">
             <div class="heading-search-add">
                 <h1 class="main-heading">Board</h1>
                 <div class="input-and-button-container">
