--- a/summary.html
+++ b/summary.html
@@ -20,10 +20,10 @@
 
     <div class="content-destop">
         <div w3-include-html="assets/templates/destop_template.html"></div>
-        <div class="inner-content">
+        <div class="inner-content" id="inner-content">
             <div class="headline">
-                <h1>Summary</h1>
-                <img src="assets/img/devideLineSummary.png">
+                <h1 style="margin-right: 16px;">Summary</h1>
+                <img src="assets/img/devideLineSummary.svg">
                 <span>Everything in a nutshell!</span>
             </div>
             <div class="summary">
@@ -78,6 +78,29 @@
                 </div>
             </div>
         </div>
+        <div class="help-content d-none" id="help-content">
+            <h1>Help</h1>
+            <img src="assets/img/backButton.svg" onclick="hideHelp()">
+            <div>
+                <h2>What is Join?</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia repellendus libero voluptatibus recusandae cupiditate exercitationem, eligendi harum culpa natus obcaecati. Consectetur incidunt quaerat quas aperiam, blanditiis enim in eos maxime?</p>
+            </div>
+            <div class="help-table">
+                <h2>How to use it</h2>
+                <div>
+                    <span>1.</span>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. rerum dolorum ipsum perferendis qui optio autem aliquam, in corporis asperiores distinctio cumque placeat.</p>
+                </div>
+                <div>
+                    <span>2.</span>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, pariatur ab aliquid vero assumenda cum illo delectus at eum a laudantium ad eius amet, explicabo hic. Animi suscipit cumque magni.</p>
+                </div>
+                <div>
+                    <span>3.</span>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, sunt. Rem vitae fuga aspernatur eum a non delectus!</p>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="content-mobile">
@@ -85,6 +108,7 @@
             <span style="font-size: 14px;">Kanban Project Management Tool</span>
             <h1>Summary</h1>
             <span style="color: #2A3647;">Everything in a nutshell!</span>
+            <img src="assets/img/devideLineSummary.svg">
         </div>
         <div class="summary-information-mobile">
             <div class="first-row">
