added helper page when click on questionmark

--- a/contacts.html
+++ b/contacts.html
@@ -23,6 +23,29 @@
 
     <div class="content-destop">
         <div w3-include-html="assets/templates/destop_template.html"></div>
+        <div class="help-content d-none" id="help-content">
+            <h1>Help</h1>
+            <img src="assets/img/backButton.svg" onclick="hideHelp()">
+            <div>
+                <h2>What is Join?</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia repellendus libero voluptatibus recusandae cupiditate exercitationem, eligendi harum culpa natus obcaecati. Consectetur incidunt quaerat quas aperiam, blanditiis enim in eos maxime?</p>
+            </div>
+            <div class="help-table">
+                <h2>How to use it</h2>
+                <div>
+                    <span>1.</span>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. rerum dolorum ipsum perferendis qui optio autem aliquam, in corporis asperiores distinctio cumque placeat.</p>
+                </div>
+                <div>
+                    <span>2.</span>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, pariatur ab aliquid vero assumenda cum illo delectus at eum a laudantium ad eius amet, explicabo hic. Animi suscipit cumque magni.</p>
+                </div>
+                <div>
+                    <span>3.</span>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, sunt. Rem vitae fuga aspernatur eum a non delectus!</p>
+                </div>
+            </div>
+        </div>
         <div class="inner-content" id="inner-content">
             <div class="complete-page">
                 <div class="all-contacts">
