added responsive help page

--- a/add_task.html
+++ b/add_task.html
@@ -24,6 +24,10 @@
         </div>
     </div>
 
+    <div class="content-mobile">
+        <div w3-include-html="assets/templates/help_template_mobile.html"></div>
+    </div>
+
 </body>
 
 </html>
