--- a/legal_notice.html
+++ b/legal_notice.html
@@ -20,6 +20,10 @@
         </div>
         <div w3-include-html="assets/templates/help_template.html"></div>
     </div>
+
+    <div class="content-mobile">
+        <div w3-include-html="assets/templates/help_template_mobile.html"></div>
+    </div>
 </body>
 
 </html>
