--- a/summary.html
+++ b/summary.html
@@ -82,6 +82,7 @@
     </div>
 
     <div class="content-mobile">
+        <div w3-include-html="assets/templates/help_template_mobile.html"></div>
         <div class="headline-mobile">
             <span style="font-size: 14px;">Kanban Project Management Tool</span>
             <h1>Summary</h1>
