--- a/contacts.html
+++ b/contacts.html
@@ -25,7 +25,7 @@
         <div w3-include-html="assets/templates/destop_template.html"></div>
         <div w3-include-html="assets/templates/help_template.html"></div>
         <div class="inner-content" id="inner-content">
-            <div class="complete-page">
+            <div class="complete-page d-none">
                 <div class="all-contacts">
 
                     <div class="alphabet-box">
@@ -174,7 +174,7 @@
 
                         <div class="email-div">
                             <div class="contact-variant">Email</div>
-                            <div class="email-adress">test123@gmail.com</div>
+                            <div class="email-adress"><a href="#">test123@gmail.com</a></div>
                         </div>
 
                         <div class="phone-div">
@@ -187,6 +187,42 @@
                     </div>
                 </div>
             </div>
+
+            <div class="add-contact-display">
+                <div class="add-contact">
+                    <div class="add-contact-design">
+                        <div class="add-contact-logo"><img src="assets/img/Join_White.png"></div>
+                        <div class="add-contact-headline"><h2>Add contact</h2></div>
+                        <div class="add-contact-motivation"><span>Tasks are better with a team!</span></div>
+                        <div class="add-contact-line"></div>
+                    </div>
+
+                    <div class="add-contact-fields">
+                        <div class="close-x"><img src="assets/img/X.png"></div>
+
+                        <div class="add-contact-image"><img src="assets/img/add_contact_img.png"></div>
+
+                        <div class="add-contact-input-fields">
+                            <div class="name-field">
+                                <input type="text" class="form-control" placeholder="Name" aria-label="First name">
+                            </div>
+                            <div class="email-field">
+                                <input type="text" class="form-control" placeholder="Email" aria-label="First name">
+                            </div>
+                            <div class="phone-field">
+                                <input type="text" class="form-control" placeholder="Phone" aria-label="First name">
+                            </div>
+                            <div class="add-contact-buttons">
+                                <div><img src="assets/img/cancel_icon.png"></div>
+                                <div><img src="assets/img/create_contact_icon.png"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+
+
         </div>
 
 
