--- a/contacts.html
+++ b/contacts.html
@@ -188,7 +188,7 @@
                 </div>
             </div>
 
-            <div class="add-contact-display">
+            <div class="add-contact-display d-none">
                 <div class="add-contact">
                     <div class="add-contact-design">
                         <div class="add-contact-logo"><img src="assets/img/Join_White.png"></div>
@@ -215,6 +215,39 @@
                             <div class="add-contact-buttons">
                                 <div><img src="assets/img/cancel_icon.png"></div>
                                 <div><img src="assets/img/create_contact_icon.png"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+
+
+            <div class="addedit-contact-display">
+                <div class="addedit-contact">
+                    <div class="addedit-contact-design">
+                        <div class="addedit-contact-logo"><img src="assets/img/Join_White.png"></div>
+                        <div class="addedit-contact-headline"><h2>Edit contact</h2></div>
+                        <div class="addedit-contact-line"></div>
+                    </div>
+
+                    <div class="addedit-contact-fields">
+                        <div class="close-x"><img src="assets/img/X.png"></div>
+
+                        <div class="addedit-contact-image"><img src="assets/img/add_contact_img.png"></div>
+
+                        <div class="addedit-contact-input-fields">
+                            <div class="name-field">
+                                <input type="text" class="form-control" placeholder="Name" aria-label="First name">
+                            </div>
+                            <div class="email-field">
+                                <input type="text" class="form-control" placeholder="Email" aria-label="First name">
+                            </div>
+                            <div class="phone-field">
+                                <input type="text" class="form-control" placeholder="Phone" aria-label="First name">
+                            </div>
+                            <div class="edit-contact-buttons">
+                                <div><img src="assets/img/Save_Button.png"></div>
                             </div>
                         </div>
                     </div>
