added hover effect and links

--- a/summary.html
+++ b/summary.html
@@ -29,20 +29,20 @@
             <div class="summary">
                 <div class="summary-information">
                     <div class="first-row">
-                        <div>
+                        <a href="board.html">
                             <h2>2</h2>
                             <span>Tasks in Board</span>
-                        </div>
-                        <div>
+                        </a>
+                        <a href="board.html">
                             <h2>2</h2>
                             <span>Tasks in Progress</span>
-                        </div>
-                        <div>
+                        </a>
+                        <a href="board.html">
                             <h2>2</h2>
                             <span>Awaiting Feedback</span>
-                        </div>
+                        </a>
                     </div>
-                    <div class="second-row">
+                    <a href="board.html" class="second-row">
                         <div class="urgent-tasks">
                             <img src="assets/img/urgentSymbol.svg">
                             <div>
@@ -54,22 +54,22 @@
                             <span style="font-size: 18px;"><strong>October 16, 2022</strong></span>
                             <span style="font-size: 14px; margin-top: 6px;">Upcoming Deadline</span>
                         </div>
-                    </div>
+                    </a>
                     <div class="third-row">
-                        <div>
+                        <a href="board.html">
                             <img src="assets/img/todoSymbolSummaryPen.svg">
                             <div class="content-div-row-3">
                                 <h2>1</h2>
                                 <span>To-do</span>
                             </div>
-                        </div>
-                        <div>
+                        </a>
+                        <a href="board.html">
                             <img src="assets/img/doneSymbolSummary.svg">
                             <div class="content-div-row-3">
                                 <h2>1</h2>
                                 <span>Done</span>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <div class="greeting">
@@ -91,20 +91,20 @@
         </div>
         <div class="summary-information-mobile">
             <div class="first-row">
-                <div>
+                <a href="board.html">
                     <h2>2</h2>
                     <span>Tasks in Board</span>
-                </div>
-                <div>
+                </a>
+                <a href="board.html">
                     <h2>2</h2>
                     <span>Tasks in Progress</span>
-                </div>
-                <div>
+                </a>
+                <a href="board.html">
                     <h2>2</h2>
                     <span>Awaiting Feedback</span>
-                </div>
+                </a>
             </div>
-            <div class="second-row">
+            <a class="second-row" href="board.html">
                 <div class="urgent-tasks">
                     <img src="assets/img/urgentSymbol.svg">
                     <div>
@@ -116,22 +116,22 @@
                     <span style="font-size: 16px;"><strong>October 16, 2022</strong></span>
                     <span style="font-size: 13px; margin-top: 6px;">Upcoming Deadline</span>
                 </div>
-            </div>
+            </a>
             <div class="third-row">
-                <div>
+                <a href="board.html">
                     <img src="assets/img/todoSymbolSummaryPen.svg">
                     <div class="content-div-row-3-mobile">
                         <h2>1</h2>
                         <span>To-do</span>
                     </div>
-                </div>
-                <div>
+                </a>
+                <a href="board.html">
                     <img src="assets/img/doneSymbolSummary.svg">
                     <div class="content-div-row-3-mobile">
                         <h2>1</h2>
                         <span>Done</span>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
     </div>
