bug fix hover summary

--- a/summary.html
+++ b/summary.html
@@ -57,14 +57,18 @@
                     </a>
                     <div class="third-row">
                         <a href="board.html">
-                            <img src="assets/img/todoSymbolSummaryPen.svg">
+                            <div class="elipse">
+                                <img src="assets/img/pencilToDo.svg">
+                            </div>
                             <div class="content-div-row-3">
                                 <h2>1</h2>
                                 <span>To-do</span>
                             </div>
                         </a>
                         <a href="board.html">
-                            <img src="assets/img/doneSymbolSummary.svg">
+                            <div class="elipse">
+                                <img src="assets/img/doneSymbol.svg" class="done-symbol">
+                            </div>
                             <div class="content-div-row-3">
                                 <h2>1</h2>
                                 <span>Done</span>
@@ -119,14 +123,18 @@
             </a>
             <div class="third-row">
                 <a href="board.html">
-                    <img src="assets/img/todoSymbolSummaryPen.svg">
+                    <div class="elipse">
+                        <img src="assets/img/pencilToDo.svg">
+                    </div>
                     <div class="content-div-row-3-mobile">
                         <h2>1</h2>
                         <span>To-do</span>
                     </div>
                 </a>
                 <a href="board.html">
-                    <img src="assets/img/doneSymbolSummary.svg">
+                    <div class="elipse">
+                        <img src="assets/img/doneSymbol.svg" class="done-symbol">
+                    </div>
                     <div class="content-div-row-3-mobile">
                         <h2>1</h2>
                         <span>Done</span>
