first commit board mobile version

--- a/board.html
+++ b/board.html
@@ -50,17 +50,17 @@
 
                 <div class="contributor-container">
                     <span class="contributors-circle-big yellow-dark" style="margin-right: 32px;">DM</span>
-                    <span class="due-date-prio" style="margin-bottom: 0 !important ;" >Dennis Maier</span>
+                    <span class="due-date-prio" style="margin-bottom: 0 !important ;">Dennis Maier</span>
                 </div>
-                
+
                 <div class="contributor-container">
                     <span class="contributors-circle-big lila" style="margin-right: 32px;">NM</span>
-                    <span class="due-date-prio" style="margin-bottom: 0 !important ;" >Niclas Michel</span>
+                    <span class="due-date-prio" style="margin-bottom: 0 !important ;">Niclas Michel</span>
                 </div>
-                
+
                 <div class="contributor-container">
                     <span class="contributors-circle-big orange" style="margin-right: 32px;">SV</span>
-                    <span class="due-date-prio" style="margin-bottom: 0 !important ;" >Simon Vitt</span>
+                    <span class="due-date-prio" style="margin-bottom: 0 !important ;">Simon Vitt</span>
                 </div>
 
             </div>
@@ -198,6 +198,203 @@
 
             </div>
         </div>
+    </div>
+
+    <div class="content-mobile">
+
+        <span class="small-heading-mobile">Kanban Project Management Tool</span>
+
+        <div class="heading-search-add">
+            <h1 class="main-heading">Board</h1>
+            <div class="input-and-button-container">
+                <div class="board-input-container">
+                    <input class="board-inputfield" type="text" placeholder="Find Task">
+                    <div style="display: flex ;">
+                        <span class="vertical-line">|</span>
+                        <img class="search-icon" src="assets/img/search-icon.svg" alt="">
+                    </div>
+                </div>
+                <button class="add-task-btn">Add task<img style="margin-left: 5px; height: 15px; width: 15px;"
+                        src="assets/img/plus-icon.svg"> </button>
+                <button class="add-task-btn-mobile"><img src="assets/img/plus-icon.svg"> </button>
+            </div>
+        </div>
+
+        <div class="tasks-container">
+
+            <div class="task">
+
+                <div class="tasks-heading">
+                    <h3>To do</h3>
+                    <span class="plus-icon">+</span>
+                </div>
+
+                <div class="tasks-main">
+
+                    <div class="task-card">
+
+                        <span class="card-category design">Design</span>
+
+                        <span class="card-title">Website redesign</span>
+
+                        <span class="card-description">Modify the contents of the main website...</span>
+
+                        <div class="card-bottom">
+
+                            <div class="contributors-container">
+                                <span class="contributors-circle blue">AM</span>
+                                <span class="contributors-circle purple">BS</span>
+
+                            </div>
+
+                            <img src="assets/img/low.svg" alt="">
+
+                        </div>
+
+
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="task">
+
+                <div class="tasks-heading">
+                    <h3>In progress</h3>
+                    <span class="plus-icon">+</span>
+                </div>
+
+                <div class="tasks-main">
+
+                    <div onclick="openCard()" class="task-card">
+
+                        <span class="card-category sales">Sales</span>
+
+                        <span class="card-title">Call potential clients</span>
+
+                        <span class="card-description">Present product to prespective clients...</span>
+
+                        <div class="card-bottom">
+
+                            <div class="contributors-container">
+                                <span class="contributors-circle yellow-dark">DM</span>
+                                <span class="contributors-circle lila">NM</span>
+                                <span class="contributors-circle orange">SV</span>
+                            </div>
+
+                            <img src="assets/img/low.svg" alt="">
+
+                        </div>
+
+
+                    </div>
+
+
+                </div>
+
+            </div>
+
+            <div class="task">
+
+                <div class="tasks-heading">
+                    <h3>Feedback</h3>
+                    <span class="plus-icon">+</span>
+                </div>
+
+                <div class="tasks-main">
+                    <div onclick="openCard()" class="task-card">
+
+                        <span class="card-category sales">Sales</span>
+
+                        <span class="card-title">Call potential clients</span>
+
+                        <span class="card-description">Present product to prespective clients...</span>
+
+                        <div class="card-bottom">
+
+                            <div class="contributors-container">
+                                <span class="contributors-circle yellow-dark">DM</span>
+                                <span class="contributors-circle lila">NM</span>
+                                <span class="contributors-circle orange">SV</span>
+                            </div>
+
+                            <img src="assets/img/low.svg" alt="">
+
+                        </div>
+
+
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="task">
+
+                <div class="tasks-heading">
+                    <h3>Done</h3>
+                    <span class="plus-icon">+</span>
+                </div>
+
+                <div class="tasks-main">
+                    <div onclick="openCard()" class="task-card">
+
+                        <span class="card-category sales">Sales</span>
+
+                        <span class="card-title">Call potential clients</span>
+
+                        <span class="card-description">Present product to prespective clients...</span>
+
+                        <div class="card-bottom">
+
+                            <div class="contributors-container">
+                                <span class="contributors-circle yellow-dark">DM</span>
+                                <span class="contributors-circle lila">NM</span>
+                                <span class="contributors-circle orange">SV</span>
+                            </div>
+
+                            <img src="assets/img/low.svg" alt="">
+
+                        </div>
+
+
+
+
+                    </div>
+
+                    <div onclick="openCard()" class="task-card">
+
+                        <span class="card-category sales">Sales</span>
+
+                        <span class="card-title">Call potential clients</span>
+
+                        <span class="card-description">Present product to prespective clients...</span>
+
+                        <div class="card-bottom">
+
+                            <div class="contributors-container">
+                                <span class="contributors-circle yellow-dark">DM</span>
+                                <span class="contributors-circle lila">NM</span>
+                                <span class="contributors-circle orange">SV</span>
+                            </div>
+
+                            <img src="assets/img/low.svg" alt="">
+
+                        </div>
+
+
+                    </div>
+
+                </div>
+
+            </div>
+
+
+        </div>
+
+
+
     </div>
 
 </body>
