board mobile version updated

--- a/board.html
+++ b/board.html
@@ -305,7 +305,7 @@
                 <div class="tasks-main">
                     <div onclick="openCard()" class="task-card">
 
-                        <span class="card-category sales">Sales</span>
+                        <span class="card-category media">Media</span>
 
                         <span class="card-title">Call potential clients</span>
 
@@ -340,7 +340,7 @@
                 <div class="tasks-main">
                     <div onclick="openCard()" class="task-card">
 
-                        <span class="card-category sales">Sales</span>
+                        <span class="card-category backoffice">Backoffice</span>
 
                         <span class="card-title">Call potential clients</span>
 
@@ -365,7 +365,7 @@
 
                     <div onclick="openCard()" class="task-card">
 
-                        <span class="card-category sales">Sales</span>
+                        <span class="card-category marketing">Marketing</span>
 
                         <span class="card-title">Call potential clients</span>
 
